--- a/api_pagos/package.json
+++ b/api_pagos/package.json
@@ -6,8 +6,10 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "gen_cli_prisma": "npx prisma generate",
-    "migrate": "npx prisma migrate dev --name init",
+    "generate:models": "npx prisma generate",
+    "migrate:first-init": "npx prisma migrate dev --name init",
+    "migrate:new": "npx prisma migrate dev --name",
+    "migrate:clean": "npx prisma migrate reset --force",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
