--- a/api_pagos/package.json
+++ b/api_pagos/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "generate:models": "npx prisma generate",
     "migrate:first-init": "npx prisma migrate dev --name init",
