--- a/app_pagos/package.json
+++ b/app_pagos/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "crypto-js": "^4.2.0",
     "flowbite": "^2.5.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
@@ -28,6 +29,7 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
