--- a/api_pagos/package.json
+++ b/api_pagos/package.json
@@ -24,8 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "puppeteer": "^23.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
