--- a/app_pagos/package.json
+++ b/app_pagos/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
     "crypto-js": "^4.2.0",
     "flowbite": "^2.5.2",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
