--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
         "use": "@vercel/static"
       },
       {
-        "src": "api_pagos/src/index.ts",
+        "src": "api_pagos/dist/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/api_pagos/src/index.ts"
+        "dest": "/api_pagos/dist/index.js"
       },
       {
         "src": "/(.*)",
