--- a/app_pagos/angular.json
+++ b/app_pagos/angular.json
@@ -46,7 +46,16 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "allowedCommonJsDependencies": [
+                "crypto-js"
+              ]
             },
             "development": {
               "optimization": false,
