--- a/api_pagos/package.json
+++ b/api_pagos/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "tsc && npm run copy-templates",
     "vercel:build": "npm generate:models && npm run build",
+    "copy-templates": "cp -r src/templates dist/templates",
     "generate:models": "npx prisma generate",
     "migrate:first-init": "npx prisma migrate dev --name init",
     "migrate:new": "npx prisma migrate dev --name",
