--- a/api_pagos/package.json
+++ b/api_pagos/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "handlebars": "^4.7.8",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "puppeteer": "^23.6.0"
@@ -40,6 +41,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/html-pdf": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "nodemon": "^3.1.7",
