Update environment configuration and add tiendaService for external API integration

--- a/api_pagos/.env.example
+++ b/api_pagos/.env.example
@@ -2,6 +2,6 @@ PORT=3000
 DATABASE_URL="mysql://usuario_ss1:12345@localhost:3306/pagos_ss1"
 JWT_SECRET="3VO7846V02734YVMGIUGPIVUYP98465V4VWT7V4YBFLHLDHZGJHERFA"
 BANCOPB="https://logical-hookworm-adversely.ngrok-free.app"
-BANCOPC="54.226.72.223:3200"
-ECOMMERCE1="http://localhost:3003"
+BANCOPC="https://creative-starling-grand.ngrok-free.app"
+ECOMMERCE1="https://sharp-rapidly-jennet.ngrok-free.app"
 ECOMMERCE2="http://localhost:3004"
